--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
+    <meta name="format-detection" content="telephone=no">
 </head>
 <body>
     <nav>
         <h1>David H McCarthy III</h1>
         <a href="#">Home</a>
-        <a href="#">Practice</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#practice">Practice</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
         <a href="#" class="nav-blog">Blog</a>
     </nav>
     <div class="top-description">
         <h1>Honesty</h1>
-        <h2>Truth</h2>
-        <h3>come</h3>
-        <h4>Fux</h4>
-        <h5>Wit</h5>
-        <h6>US!</h6>
+        <h2>Experience</h2>
+        <h4>Results</h4>
     </div>
     <section class="wrap">
         <div class="logos1">
@@ -35,10 +32,8 @@
         <div class="logos2">
             <img class="jlaw" src="/img/logos/jmls_logo.png" alt="John Marshall Law School">
             <img src="/img/logos/notre_dame_logo.png" alt="">
+            <a name="practice"></a>
         </div>
-
-
-
         <div class="practice-areas">
             <h1>Practice Areas</h1>
             <div class="employment-law">
@@ -63,6 +58,7 @@
             </div>
         </div>
         <div class="about">
+            <a name="about"></a>
             <h1>About</h1>
             <div class="attorney-profile">
                 <p>David McCarthy graduated from the University of Notre Dame  with a B.A. in English in 1971. From 1971 to 1975 he was a reporter for City News Bureau, the Evanston Review and the Wilmette Life. In 1979, he graduated cum laude from John Marshall Law School in Chicago. David was a member of the <a href="http://www.jmls.edu/lawreview/newaboutus.shtml">John Marshall Law Review</a> for two years and an associate editor of the Law Review for one year.</p>
@@ -97,10 +93,10 @@
                 by David McCarthy, July 2005.
                 <br>
                 <a href="http://www.davidmccarthy-law.com/PDFs/dcba_July_2005.pdf">Read Full Article</a>
-                <br>
             </div>
         </div>
         <div class="lead-header">
+        <a name="contact"></a>
             <h2>What's The Problem? We Can Help!</h2>
             <form action="">
                 <input type="text" name="lead-name" placeholder="Name"><br>
@@ -116,10 +112,10 @@
     <address>
         David H. McCarthy Attorney at Law, 1155 S Washington Ave. Naperville, IL 60540
         <br>
-        (630) 357-4520 DHM1649@AOL.COM
+        630 357 4520 // DHM1649@AOL.COM
 
     </address>
     <div class="call-us">
-                <a href="+6303574520"><i class="fa fa-phone-square fa-3x"></i></a>
+                <a href="tel:630-357-4520"><i class="fa fa-phone-square fa-3x"></i></a>
     </div>
 </body>
